# weather-forecast

./: .env.example  .gitignore  CHANGELOG.md  README.md  SETUP.md  VERSIONING.md  downloader.py  main.py  poc_cli.py  poc_image_hash.py  poc_image_prompt__Qwen__Qwen3-0_6B.py  poc_image_prompt__llava-hf__llava-interleave-qwen-0_5b-hf.py  poc_image_prompt__llava-hf__llava-v1_6-mistral-7b-hf.py  poc_image_resize.py  poc_llava_forecast.py  poc_pdf_to_image.py  poc_sf_login.py  poc_sf_login_auth_jwt.py  poc_sf_upload.py  pyproject.toml  requirements.txt  sfdx-project.json
poc/: hello_env.py  poc_env_loader.py  poc_pdf_download.py
salesforce/: .forceignore  .gitignore  README.md
salesforce/main/default/permissionsets/: Bulk_API_Hard_Delete.permissionset-meta.xml
salesforce/manifest/: package.xml
scripts/: cron_run_weather_job.sh  deploy_all.sh  deploy_python.sh  deploy_salesforce.sh
scripts/cleanup/: 01_query_old_files.sh  02_delete_bulk.sh  03_empty_recycle_bin.sh  delete.sh  empty-recyle-bin.sh  run_all.sh  run_all_cleanup.sh  select.sh
scripts/cleanup/apex/: emptybin.apex
src/: downloader.py  forecast_ai.py  main.py  salesforce_client.py
src/chart/: downloader.py
src/chart/processors/: image_tools.py  pdf_tools.py
src/cli/: app.py
src/forecast/: generator.py
src/orchestration/: pipeline.py
src/salesforce/: base.py  weather.py
tests/: test_app.py  test_base.py  test_cli.py  test_downloader.py  test_generator.py  test_image_tools.py  test_pdf_tools.py  test_pipeline.py  test_salesforce_client.py  test_weather.py
(+6 files in other folders)
