[project]
name = "weather-forecast"
version = "0.6.0"
requires-python = ">=3.14"
description = "A local-first PoC: JMA weather charts → LLaVA → Salesforce"

[tool.pytest.ini_options]
pythonpath = ["."]          # adds project root to Python path so imports work
testpaths = ["tests"]       # tells pytest where to look for tests
python_files = "test_*.py"  # which files are test files
python_functions = "test_*" # which functions are test functions
addopts = "-ra -q"          # default flags: show extra summary, quiet output
